test/files/run/reify-repl-fail-gracefully.check

scala> import language.experimental.macros
import language.experimental.macros

scala> import scala.reflect.runtime.universe._
import scala.reflect.runtime.universe._

scala> 

scala> reify
<console>:16: error: too few argument lists for macro invocation
       reify
       ^

scala> :quit
